bleep-bsp: bound every fork, and let CPU schedule again
The governor was an elaborate way of routing around a broken default. `testRunnerMaxMemory`
defaults to None, so a test fork got no -Xmx at all and HotSpot handed it MaxRAMPercentage=25
— a quarter of the machine. bleep then started one per core: ~18 x 12GB requested on a 48GB
box. OOM was arithmetic, and no scheduler can fix it, because a scheduler gets no say in what
a process allocates.

Every comparable tool bounds the process instead: Gradle defaults Test.maxHeapSize to 512m,
Maven Surefire runs a single fork, sbt runs tests in-process. Only Bazel schedules on memory
at all, and there it's a coarse user-declared size used as a heuristic — never as the
OOM-prevention mechanism.

So: every fork now carries an -Xmx (2GB by default, `MachineResources.withHeapBound`), for
test runners, sourcegen and KSP alike. `forkHeapMb` is the single source of truth for both
halves of the deal — what the JVM is told it may use, and what the governor is told it costs —
so the two cannot drift into the fiction they were before. A fork that needs more says so, and
then gets an OutOfMemoryError naming the limit rather than a SIGKILL landing on whichever
process the kernel picked.

Deleted, because they only existed to model an unbounded JVM: `defaultForkHeapMb`,
`defaultForkFootprintMb`, and the `defaultForkMemoryMb` field on the governor. `forkFootprintMb`
stays but is demoted — honest accounting of a bound we know, no longer the thing standing
between a fork storm and the OOM killer.

Effect on the reported machine: forks drop from 12GB to 2GB, so ~10 run concurrently against
18 cores where before exactly one did. CPU is very nearly the binding constraint again, which
is the point — a memory rail that decides how wide a build runs is a memory rail that has
taken over the scheduler's job.

Also: ReactiveTestRunner no longer passes the user's `--parallelism` as the machine's core
count. The governor describes the machine in both